--- a/dev.html
+++ b/dev.html
@@ -430,10 +430,7 @@
     opacity:0.9;
   }
 
-  /* Foreground photo mode: use the existing final-score overlay as a transparent photo display,
-     while allowing gameplay to continue underneath. */
-  #overlay.photoMode{
-    background: rgba(0,0,0,0.18);
+      background: rgba(0,0,0,0.18);
     pointer-events: none; /* allow clicks/taps to pass through to circles */
   }
   #overlay.photoMode #panel{
@@ -441,6 +438,44 @@
     border-color: rgba(255,255,255,0.12);
     backdrop-filter: blur(2px);
     pointer-events: none;
+  }
+
+
+  /* Photo overlay (foreground) */
+  #photoOverlay{
+    position:absolute;
+    inset:0;
+    display:none;
+    pointer-events:none; /* let gameplay continue underneath */
+    z-index: 30;
+  }
+  #photoOverlay.show{ display:block; }
+  #photoOverlay::before{
+    content:"";
+    position:absolute; inset:0;
+    background: rgba(0,0,0,0.18);
+  }
+  #photoOverlayImg{
+    position:absolute; inset:0;
+    width:100%; height:100%;
+    object-fit: cover;
+    object-position: center;
+    opacity: 0.92;
+    filter: saturate(1.02) contrast(1.02);
+  }
+
+
+  /* Ensure final score overlay covers the entire play area */
+  #overlay{
+    position:absolute;
+    inset:0;
+  }
+  #overlay.show{
+    display:flex;
+  }
+  #panel{
+    max-height: calc(100% - 24px);
+    overflow:auto;
   }
 
 </style>
@@ -494,16 +529,18 @@
     <div id="arena"></div>
     <svg id="linesLayer" aria-hidden="true"></svg>
 
+    <div id="photoOverlay" aria-hidden="true">
+      <img id="photoOverlayImg" alt="Uploaded photo" />
+    </div>
+
+
     <div id="overlay" role="dialog" aria-modal="true">
       <div id="panel">
         <h2>Final Score</h2>
-        <div style="margin:10px 0 12px;">
-          <img id="uploadedPhoto" alt="Uploaded photo" style="width:100%; max-height:55vh; object-fit:contain; border-radius:14px; display:none; box-shadow:0 14px 50px rgba(0,0,0,0.45);" />
-        </div>
-        <div id="score">N = 2</div>
+<div id="score">N = 2</div>
         <p>
           This is the <b>highest N</b> you reached in this session.
-          (In Dropbox, you may still need to close the preview tab/window manually.)
+          
         </p>
         <div class="row">
           <button id="restartFromOverlay">Play Again</button>
@@ -569,6 +606,8 @@
     // Safe if audio is blocked; uses the existing AudioContext.
     try{
       const ctx = ensureAudio();
+    // audible confirmation (very short)
+    try{ playToneForIndex(0, 90); }catch(e){}
       const now = ctx.currentTime;
 
       const notes = [659.25, 783.99, 987.77]; // E5, G5, B5
@@ -732,6 +771,10 @@ const endBtn = document.getElementById("endBtn");
     return audioCtx;
   }
 
+  // iOS audio unlock (first user gesture)
+  window.addEventListener("touchstart", () => { try{ ensureAudio(); }catch(e){} }, { once:true, passive:true });
+
+
   function playToneForIndex(idx, ms=140) {
     const ctx = ensureAudio();
     const o = ctx.createOscillator();
@@ -837,31 +880,26 @@ const endBtn = document.getElementById("endBtn");
 
   // Module: renders swatches and manages selection state
   
-  // ---- Upload photo as FOREGROUND (displayed in existing Final Score panel) ----
+  // ---- Upload photo as FOREGROUND overlay (covers play area, game continues underneath) ----
   const bgFileInput = document.getElementById("bgFileInput");
   const uploadBtn = document.getElementById("uploadBtn");
-  const uploadedPhoto = document.getElementById("uploadedPhoto");
-  let photoActive = false;
+  const photoOverlay = document.getElementById("photoOverlay");
+  const photoOverlayImg = document.getElementById("photoOverlayImg");
 
   function showPhotoOverlay(dataUrl){
-    if(!uploadedPhoto) return;
-    uploadedPhoto.src = dataUrl;
-    uploadedPhoto.style.display = "block";
-    overlay.classList.add("show");
-    overlay.classList.add("photoMode");
-    photoActive = true;
-    setStatus("Photo loaded (foreground). Play continues underneath.");
+    if(!photoOverlay || !photoOverlayImg) return;
+    photoOverlayImg.src = dataUrl;
+    photoOverlay.classList.add("show");
+    photoOverlay.setAttribute("aria-hidden","false");
+    setStatus("Photo overlay on. Play continues underneath.");
   }
 
   function clearPhotoOverlay(){
-    if(!uploadedPhoto) return;
-    uploadedPhoto.src = "";
-    uploadedPhoto.style.display = "none";
-    overlay.classList.remove("photoMode");
-    photoActive = false;
-    // If the overlay was only showing for photo (not final score), hide it.
-    if(!overlay.dataset.finalScoreShowing) if(!overlay.classList.contains("photoMode")) overlay.classList.remove("show");
-    setStatus("Photo cleared.");
+    if(!photoOverlay || !photoOverlayImg) return;
+    photoOverlayImg.src = "";
+    photoOverlay.classList.remove("show");
+    photoOverlay.setAttribute("aria-hidden","true");
+    setStatus("Photo overlay cleared.");
   }
 
   function openPhotoPicker(){
@@ -1214,7 +1252,6 @@ game.classList.add("goldGlow");
   }
 
   function showFinalScore(){
-    overlay.dataset.finalScoreShowing = "1";
     phase = "ended";
     clearBoard();
     scoreEl.textContent = `N = ${maxNThisSession}`;
@@ -1247,17 +1284,15 @@ game.classList.add("goldGlow");
   });
 
   restartFromOverlay.addEventListener("click", () => {
-    overlay.dataset.finalScoreShowing = "";
     // If we are in photoMode, keep overlay shown; otherwise hide it.
-    if(!overlay.classList.contains("photoMode")) if(!overlay.classList.contains("photoMode")) overlay.classList.remove("show");
+    if(!overlay.classList.contains("photoMode")) overlay.classList.remove("show");
     startGame();
   });
 
   function startGame(){
-    overlay.dataset.finalScoreShowing = "";
     ensureAudio();
     lockViewport();
-    if(!overlay.classList.contains("photoMode")) overlay.classList.remove("show");
+    overlay.classList.remove("show");
     runToken++;
     phase = "idle";
     N = 2;
