--- a/dev.html
+++ b/dev.html
@@ -205,6 +205,7 @@
 
   /* End screen */
   #overlay{
+    z-index: 50;
     position:absolute;
     inset:0;
     background: rgba(0,0,0,0.55);
@@ -447,7 +448,7 @@
     inset:0;
     display:none;
     pointer-events:none; /* let gameplay continue underneath */
-    z-index: 30;
+    z-index: 5;
   }
   #photoOverlay.show{ display:block; }
   #photoOverlay::before{
@@ -460,7 +461,7 @@
     width:100%; height:100%;
     object-fit: cover;
     object-position: center;
-    opacity: 0.92;
+    opacity: 0.35;
     filter: saturate(1.02) contrast(1.02);
   }
 
@@ -476,6 +477,14 @@
   #panel{
     max-height: calc(100% - 24px);
     overflow:auto;
+  }
+
+
+  #uploadBtn{
+    padding: 12px 18px !important;
+    min-width: 96px;
+    font-weight: 800;
+    letter-spacing: 0.2px;
   }
 
 </style>
